tests/ui/traits/const-traits/super-traits-fail-3.yny.stderr
error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:19:50
   |
LL | #[cfg(any(yyy, yny, nyy, nny))] const trait Bar: [const] Foo {}
   |                                                  ^^^^^^^ can't be applied to `Foo`
   |
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:19:50
   |
LL | #[cfg(any(yyy, yny, nyy, nny))] const trait Bar: [const] Foo {}
   |                                                  ^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:19:50
   |
LL | #[cfg(any(yyy, yny, nyy, nny))] const trait Bar: [const] Foo {}
   |                                                  ^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:19:50
   |
LL | #[cfg(any(yyy, yny, nyy, nny))] const trait Bar: [const] Foo {}
   |                                                  ^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: `[const]` can only be applied to `const` traits
  --> $DIR/super-traits-fail-3.rs:19:50
   |
LL | #[cfg(any(yyy, yny, nyy, nny))] const trait Bar: [const] Foo {}
   |                                                  ^^^^^^^ can't be applied to `Foo`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: mark `Foo` as `const` to allow it to have `const` implementations
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error[E0015]: cannot call non-const method `<T as Foo>::a` in constant functions
  --> $DIR/super-traits-fail-3.rs:38:7
   |
LL |     x.a();
   |       ^^^
   |
note: method `a` is not const because trait `Foo` is not const
  --> $DIR/super-traits-fail-3.rs:17:33
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] trait Foo { fn a(&self); }
   |                                 ^^^^^^^^^   ------------ this method is not const
   |                                 |
   |                                 this trait is not const
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: consider making trait `Foo` const
   |
LL | #[cfg(any(yny, ynn, nny, nnn))] const trait Foo { fn a(&self); }
   |                                 +++++

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0015`.
